<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_customers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/Customers"
        android:text="@string/Customers"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="417dp"
        android:layout_height="101dp"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/Logo"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_customers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:listitem="@layout/recycler_view_item" />
    <TextView
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/NoCustomers"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnAddCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:text="@string/AddCustomer" />



</LinearLayout>
